--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -7,4 +7,5 @@ application.city=City
 application.back=Back
 page.country.title=Countries Management
 application.new=New
+application.city.image=Update image
 page.city.title=Cities Management
