--- a/src/main/resources/messages/messages_fr.properties
+++ b/src/main/resources/messages/messages_fr.properties
@@ -7,5 +7,6 @@ application.city=Ville
 application.back=Retour
 page.country.title=Gestion des Pays
 application.new=Nouveau
+application.city.image=Mettre a jour l'image
 page.city.title=Gestion des Villes
 
